--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,44 +20,44 @@
 	<section class="technical" id="technical">
 		<div class="container">
 			<div class="heading">
-				<h2>Habilidades Técnicas</h2>
-				<p>Eu sei no que eu sou bom, mas estou sempre aprendendo</p>
+				<h2><%=t(:title, scope: [:skills])%></h2>
+				<p><%=t(:subtitle, scope: [:skills])%></p>
 			</div>
 			<div class="row">
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="90"> <span class="percent"></span> </span>
-						<h4>PHP</h4>
-						<p>11 anos de experiência</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="<%=t(:skill1_percentage, scope: [:skills, :details])%>"> <span class="percent"></span> </span>
+						<h4><%=t(:skill1_name, scope: [:skills, :details])%></h4>
+						<p><%=t(:skill1_title, scope: [:skills, :details])%></p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="85"> <span class="percent"></span> </span>
-						<h4>Ruby on Rails</h4>
-						<p>Paixão a primeira linha de código</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="<%=t(:skill2_percentage, scope: [:skills, :details])%>"> <span class="percent"></span> </span>
+						<h4><%=t(:skill2_name, scope: [:skills, :details])%></h4>
+						<p><%=t(:skill2_title, scope: [:skills, :details])%></p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="70"> <span class="percent"></span> </span>
-						<h4>Objective-C</h4>
-						<p>Desafios a frente</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="<%=t(:skill3_percentage, scope: [:skills, :details])%>"> <span class="percent"></span> </span>
+						<h4><%=t(:skill3_name, scope: [:skills, :details])%></h4>
+						<p><%=t(:skill3_title, scope: [:skills, :details])%></p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="75"> <span class="percent"></span> </span>
-						<h4>MySQL</h4>
-						<p>select * from table...</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="<%=t(:skill4_percentage, scope: [:skills, :details])%>"> <span class="percent"></span> </span>
+						<h4><%=t(:skill4_name, scope: [:skills, :details])%></h4>
+						<p><%=t(:skill4_title, scope: [:skills, :details])%></p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="40"> <span class="percent"></span> </span>
-						<h4>PostgreSQL</h4>
-						<p>Uma nova abordagem....</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="<%=t(:skill5_percentage, scope: [:skills, :details])%>"> <span class="percent"></span> </span>
+						<h4><%=t(:skill5_name, scope: [:skills, :details])%></h4>
+						<p><%=t(:skill5_title, scope: [:skills, :details])%></p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="50"> <span class="percent"></span> </span>
-						<h4>HTML / CSS</h4>
-						<p>Aprendendo diariamente</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="<%=t(:skill6_percentage, scope: [:skills, :details])%>"> <span class="percent"></span> </span>
+						<h4><%=t(:skill6_name, scope: [:skills, :details])%></h4>
+						<p><%=t(:skill6_title, scope: [:skills, :details])%></p>
 					</div>
 				</div>
 			</div>
