Fix image paths, css and add missing file

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -33,7 +33,7 @@ header{
 }
 
 .bannerPart{
-	/*background:url(website/1.jpg) no-repeat 0 0;*/
+	/*background:url(/assets/website/1.jpg) no-repeat 0 0;*/
 	height:100%;
 	overflow:hidden;
 }
