--- a/app/assets/stylesheets/lightbox.css.scss
+++ b/app/assets/stylesheets/lightbox.css.scss
@@ -52,19 +52,19 @@
 	z-index:110;
 }
 .ui-lightbox-panorama-icon-expand {
-	background:url(website/zoom.png) top left no-repeat;
+	background:url(/assets/website/zoom.png) top left no-repeat;
 }
 .ui-lightbox-panorama-icon-expand-hover {
-	background:url(website/zoom.png) top left no-repeat;
+	background:url(/assets/website/zoom.png) top left no-repeat;
 }
 .ui-lightbox-panorama-icon-shrink {
-	background:url(website/zoom-hover.png) top right no-repeat;
+	background:url(/assets/website/zoom-hover.png) top right no-repeat;
 }
 .ui-lightbox-panorama-icon-shrink-hover {
-	background:url(website/zoom-hover.png) top right no-repeat;
+	background:url(/assets/website/zoom-hover.png) top right no-repeat;
 }
 .ui-lightbox-loader {
-	background:url(loader.gif) center center no-repeat;
+	background:url(/assets/website/ajax-loader.gif) center center no-repeat;
 }
 #ui-lightbox-bottombar {
 	margin-top:5px;
