--- a/app/assets/stylesheets/work.css.scss
+++ b/app/assets/stylesheets/work.css.scss
@@ -50,7 +50,7 @@
 	float:left;
 	width:15px;
 	height:50px;
-	background:url(website/arrow-left.png) no-repeat 0 23px;
+	background:url(/assets/website/arrow-left.png) no-repeat 0 23px;
 }
 .exCon{
 	width:auto;
