--- a/app/assets/stylesheets/portfolio.css.scss
+++ b/app/assets/stylesheets/portfolio.css.scss
@@ -1,19 +1,19 @@
 /*----------------------------------------------------
  10. Protfolio Style
 ------------------------------------------------------*/
-.protfolio{
+.portfolio{
 	background:#2bb3dd;
 }
-.protfolio .container{
+.portfolio .container{
 	padding-top:85px ;
 	padding-bottom:90px ;
 }
 
-.protfolio .heading p{
+.portfolio .heading p{
 	padding-bottom:41px;
 }
 
-.protfolio h4{
+.portfolio h4{
 	font-weight:700;
 }
 
