--- a/app/assets/stylesheets/work.css.scss
+++ b/app/assets/stylesheets/work.css.scss
@@ -1,27 +1,27 @@
 /*----------------------------------------------------
  8.	Work Experience Style
 ------------------------------------------------------*/
-.exprience{
+.experience{
 	background:#fff;
 }
-.exprience .container{
+.experience .container{
 	padding-top:85px ;
 	padding-bottom:90px ;
 }
 
-.exprience h2{
+.experience h2{
 	color:#ff675f;
 }
-.exprience p{
+.experience p{
 	color:#84868d;
 	/*font-size:13px;*/
 	line-height:18px;
 }
-.exprience .heading p{
+.experience .heading p{
 	padding-bottom:41px;
 }
 
-.exprience h4{
+.experience h4{
 	font-weight:700;
 }
 
