--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,8 +66,8 @@
 		</div>
 	</section>
 	<!--technical end-->
-	<!--exprience start-->
-	<section class="exprience" id="exprience">
+	<!--experience start-->
+	<section class="experience" id="experience">
 		<div class="container">
 			<div class="heading">
 				<h2>Experiência de trabalho</h2>
@@ -153,7 +153,7 @@
 			</div>
 		</div>
 	</section>
-	<!--exprience end-->
+	<!--experience end-->
 	<!--education start-->
 	<section class="education" id="education">
 		<div class="container">
@@ -191,8 +191,8 @@
 		</div>
 	</section>
 	<!--education end-->
-	<!--protfolio start-->
-	<section class="protfolio" id="protfolio">
+	<!--portfolio start-->
+	<section class="portfolio" id="portfolio">
 		<div class="container">
 			<div class="heading">
 				<h2>Portfólio</h2>
@@ -390,7 +390,7 @@
 			</ul>
 		</div>
 	</section>
-	<!--protfolio end-->
+	<!--portfolio end-->
 	<!--contact start-->
 	<section class="contact" id="contact">
 		<div class="container topCon">
