--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 			<!--banner end-->
-			<div class="bannerText container">
+			<div id="home" class="bannerText container">
 				<h1>Gustavo Cunha</h1>
 				<h2>Desenvolvimento Web, Mobile, consultoria em Engenharia de Software</h2>
 			</div>
@@ -60,14 +60,14 @@
 									</div>
 									<div class="navbar-collapse collapse">
 										<ul class="nav navbar-nav">
-											<li class="menuItem active"><a href="#wrapper">Home</a></li>
-											<li class="menuItem"><a href="#aboutme">Sobre</a></li>
-											<li class="menuItem"><a href="#technical">Habilidades</a></li>
-											<li class="menuItem"><a href="#exprience">Experiência</a></li>
-											<li class="menuItem"><a href="#education">Educação</a></li>
-											<li class="menuItem"><a href="#protfolio">Portfolio</a></li>
-											<li class="menuItem"><a href="#contact">Contato</a></li>
-											<li class="menuItem"><a href="#footer">Social</a></li>
+											<li id="menu-home" class="menuItem active"><a href="#home">Home</a></li>
+											<li id="menu-aboutme" class="menuItem"><a href="#aboutme">Sobre</a></li>
+											<li id="menu-technical" class="menuItem"><a href="#technical">Habilidades</a></li>
+											<li id="menu-experience" class="menuItem"><a href="#experience">Experiência</a></li>
+											<li id="menu-education" class="menuItem"><a href="#education">Educação</a></li>
+											<li id="menu-portfolio" class="menuItem"><a href="#portfolio">Portfolio</a></li>
+											<li id="menu-contact" class="menuItem"><a href="#contact">Contato</a></li>
+											<li id="menu-footer" class="menuItem"><a href="#footer">Social</a></li>
 										</ul>
 									</div>
 								</div>
